--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
     margin: 0px;
 }
 
-.sections {
+.section1 {
     height: 700px;
     background-image: url("./images/donation13.jpg");
     background-repeat: no-repeat;
+    background-image: linear-gradient(black);
     background-size: 100% 100%;
     border: 5px solid yellow;
 }
@@ -42,4 +43,96 @@ body {
     font-weight: 700;
     margin-top: 40px;
     size: 50px;
+}
+
+.section2 {
+    height: 800px;
+    margin-top: 50px;
+    background-size: 100% 100%;
+    border: 5px solid yellow;
+}
+
+.donate-text {
+    text-align: center;
+}
+
+#donate-today {
+    font-size: 50px;
+}
+
+#donate-today-text {
+    font-size: 25px;
+}
+
+.parent-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.child-card {
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 40px;
+    background-color: #FAFAFA;
+    border-radius: 5px;
+}
+
+#amount {
+    border: 3px solid #f45c43;
+    background-color: #FFEEEE;
+}
+
+#amount200 {
+    color: #f45c43;
+}
+
+#other-amount {
+    text-align: center;
+    color: gray;
+}
+
+#hr-line {
+    width: 25%;
+    border-top: 2px solid grey;
+}
+
+#payment-head {
+    text-align: center;
+    font-size: 30px;
+}
+
+.payment-method {
+    display: flex;
+}
+
+.payment-name {
+    background-color: red;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding-left: 230px;
+    padding-right: 230px;
+    color: white;
+}
+
+#card {
+    background-color: #eb3349;
+}
+
+#mobile-banking {
+    background-color: #f45c43;
+}
+
+#net-banking {
+    background-color: #ff512f;
+}
+
+#button-align {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#donate-today-button {
+    background-color: #ff512f;
 }
