--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     height: 700px;
     background-image: url("./images/donation13.jpg");
     background-repeat: no-repeat;
-    background-image: linear-gradient(black);
     background-size: 100% 100%;
     border: 5px solid yellow;
 }
@@ -56,11 +55,11 @@ body {
     text-align: center;
 }
 
-#donate-today {
+.donate-header {
     font-size: 50px;
 }
 
-#donate-today-text {
+.donate-small-text {
     font-size: 25px;
 }
 
@@ -135,4 +134,56 @@ body {
 
 #donate-today-button {
     background-color: #ff512f;
+}
+
+.section3 {
+    height: 800px;
+    margin-top: 50px;
+    background-size: 100% 100%;
+    border: 5px solid yellow;
+}
+
+.another-child-card {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 20px;
+    background-color: #FAFAFA;
+    border-radius: 5px;
+}
+
+#c1 {
+    background-color: bisque;
+}
+
+#c2 {
+    background-color: rgb(203, 252, 247);
+}
+
+#c3 {
+    background-color: rgb(188, 250, 185);
+}
+
+#c4 {
+    background-color: rgba(178, 251, 220, 0.788);
+}
+
+#c5 {
+    background-color: rgb(252, 220, 231);
+}
+
+.card-paragraph {
+    font-size: 10px;
+}
+
+footer {
+    color: white;
+    height: 120px;
+    background-color: #0B0D17;
+    text-align: center;
+}
+
+#footer-text {
+    padding: 50px;
 }
