--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-image: url("./images/donation13.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    border: 5px solid yellow;
+    /* border: 5px solid rgba(21, 15, 15, 0.749); */
 }
 
 .text {
@@ -46,9 +46,9 @@ body {
 
 .section2 {
     height: 800px;
-    margin-top: 50px;
+    margin-top: 170px;
     background-size: 100% 100%;
-    border: 5px solid yellow;
+    /* border: 5px solid yellow; */
 }
 
 .donate-text {
@@ -138,9 +138,9 @@ body {
 
 .section3 {
     height: 800px;
-    margin-top: 50px;
+    margin-top: 100px;
     background-size: 100% 100%;
-    border: 5px solid yellow;
+    /* border: 5px solid yellow; */
 }
 
 .another-child-card {
