--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     height: 700px;
     background-image: url("./images/donation13.jpg");
     background-repeat: no-repeat;
+    opacity: 0.8;
     background-size: 100% 100%;
 }
 
@@ -255,6 +256,41 @@ h1 {
 .section5-text-div {
     width: 50%;
     padding-left: 50px;
+}
+
+.section6 {
+    margin-top: 100px;
+    height: 450px;
+    border: 5px dashed #f45c43;
+}
+
+.campaign-heading {
+    text-align: center;
+}
+
+.campaign-button-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 150px;
+}
+
+.campaign-button {
+    padding: 15px 25px;
+    border-radius: 5px;
+    font-size: 15px;
+    font-weight: 700;
+    color: #eb3349;
+    border-color: #eb3349;
+    background: white;
+}
+
+#campaign-head {
+    color: #141e30;
+}
+
+#our {
+    color: #eb3349;
 }
 
 footer {
