--- a/style.css
+++ b/style.css
@@ -185,6 +185,9 @@ body {
 
 }
 
+.combine4-5 {
+    background: #141e30;
+}
 
 .section4 {
     display: flex;
@@ -212,6 +215,7 @@ h1 {
 .paragraph {
     margin: 10px;
     font-weight: 550;
+    color: white;
 }
 
 .button-section4 {
@@ -259,12 +263,11 @@ h1 {
 }
 
 .section6 {
-    margin-top: 100px;
     height: 450px;
-    border: 5px dashed #f45c43;
 }
 
 .campaign-heading {
+    padding-top: 60px;
     text-align: center;
 }
 
@@ -291,6 +294,46 @@ h1 {
 
 #our {
     color: #eb3349;
+}
+
+.section7 {
+    display: flex;
+    height: 400px;
+}
+
+
+.join-us-image-div {
+    width: 40%;
+}
+
+.join-us-image {
+    height: 100%;
+    width: 100%;
+}
+
+.join-us-text {
+    width: 60%;
+    padding-top: 30px;
+    padding-left: 50px;
+    padding-right: 20px;
+    color: white;
+    background-color: black;
+}
+
+.registration-button {
+    margin-top: 70px;
+    padding: 15px 25px;
+    border-radius: 5px;
+    font-size: 15px;
+    font-weight: 700;
+    color: #ff512f;
+    border-color: #ff512f;
+    background: black;
+}
+
+#reg-text {
+    padding-top: 25px;
+    color: grey;
 }
 
 footer {
