--- a/style.css
+++ b/style.css
@@ -336,7 +336,60 @@ h1 {
     color: grey;
 }
 
+.section8 {
+    height: 500px;
+}
+
+.get-update-text {
+    text-align: center;
+
+}
+
+#get-update-header {
+    color: #FAFAFA;
+    background-image: linear-gradient(to right, #ffd89b, #19547b);
+    margin-top: 120px;
+    margin-left: 500px;
+    margin-right: 500px;
+}
+
+#get-update-paragraph {
+    color: gray;
+    font-size: 18px;
+}
+
+.Email-button-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 40px;
+    margin-left: 500px;
+    margin-right: 500px;
+    padding: 50px 100px;
+    background: #FFF4D6;
+}
+
+#input-box {
+    padding: 5px 5px;
+    border-radius: 5px;
+    font-size: 15px;
+    font-weight: 700;
+    color: #ff512f;
+    border: none;
+    background: #D9D9D9;
+}
+
+#subscribe-button {
+    padding: 5px 5px;
+    font-size: 15px;
+    font-weight: 700;
+    color: #ff512f;
+    background: black;
+}
+
 footer {
+    margin-top: -15px;
     color: white;
     height: 120px;
     background-color: #0B0D17;
